--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.0.0-rc22",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.1",
     "next": "14.1.0",
     "react": "^18",
     "react-day-picker": "^8.10.0",
