--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
@@ -34,6 +35,7 @@
     "tailwindcss-animate": "^1.0.7",
     "utility-types": "^3.11.0",
     "uuid": "^9.0.1",
+    "vaul": "^0.9.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
